# Electron_NAPI_SharedArrayBuffer

./: .gitignore  .gitmodules  binding.gyp  bios.html  index.html  main.js  package-lock.json  package.json  throttle.js  vite.config.ts
APP/: build_app.sh
APP/backend/: CMakeLists.txt  build.sh  python_bidirectional_ipc_script.py  python_ipc_win.cpp  sample_plugin.cc
APP/backend/BPG_Protocol/: CMakeLists.txt  bpg_decoder.cpp  bpg_types.h  buffer_writer.h
APP/backend/BPG_Protocol/tests/: bpg_test_app.cpp
APP/backend/plugins/: CMakeLists.txt
APP/frontend/: package-lock.json  package.json
APP/frontend/src/: App.tsx
APP/frontend/src/lib/: BPG_Protocol.ts  SharedMemoryChannel.ts  nativeAddon.ts
APP/frontend/src/lib/__tests__/: BPG_Protocol.test.ts
doc/: Implementation.md  README.md  SharedArrayBuffer.md  Tutorial.md
electron/: main.js  preload.js
native/: addon.cc  hello.cc  plugin_interface.h  plugin_loader.cc  plugin_loader.h  thread_safe_queue.h
native/plugins/: CMakeLists.txt  python_ipc.cc  python_plugin.cc  sample_plugin.cc
native/plugins/BPG_Protocol/: BPG.md  CMakeLists.txt  bpg_decoder.cpp  bpg_encoder.cpp  bpg_encoder.h  bpg_link_interface.h  bpg_types.h  buffer_writer.h
native/plugins/BPG_Protocol/tests/: bpg_test_app.cpp
native/plugins/python_script/: example.py  test_plugin.py
src/: App.css  App.tsx
src/lib/: BPG_Protocol.ts  SharedMemoryChannel.ts  nativeAddon.ts
tests/: PLAYWRIGHTHELP.md  test_addon.mjs  test_bench20mp_playwright.mjs  test_data_selection_playwright.mjs  test_e2e.mjs  test_graph_pipeline_e2e.mjs  test_graph_pipeline_playwright.mjs  test_integration.mjs  test_paths.mjs  test_project_create_playwright.mjs  test_project_crud_playwright.mjs  test_stress.mjs  test_xapphub_e2e.mjs
